# swn-discord-bot

./: .gitignore  .pylintrc  README.md  bot.py  launcher.py  pyproject.toml  requirements.txt
base/: attributes.py  consts.py  dice.py  inventory.py  skills.py  utils.py
cogs/: _types.py  admin.py  meta.py
db/: __init__.py
tests/: test_attributes.py  test_bot.py  test_skills.py  test_utils.py
tests/cogs/: conftest.py  test_admin.py
